<!--
  ~ Copyright (c) 2019.
  ~
  ~ Author: Mahatta Maulana
  ~ Github: https://github.com/hattamaulana
  ~
  ~ Last Modified at 9/25/19 11:46 PM
  -->

<resources>
    <string name="app_name">SMART RESTO</string>
    <string name="app_desc">Kantin Pintar Merupakan Inovasi Teknologi Informasi Masa Kini</string>
    <string name="txtScanner">Scanner</string>
    <string name="txtHelper">Bantuan</string>
    <string name="txtName">Nama</string>
    <string name="txtNominal">Nominal</string>
    <string name="txtPay">Bayar</string>
    <string name="txtTotal">Total</string>
    <string name="txtCheckout">Checkout</string>
    <string name="txtPayment">Pembayaran</string>
    <string name="txtNegativeButton">Tidak</string>
    <string name="txtPositiveButton">Ya</string>
    <string name="lblTitleDialog">Peringatan</string>
    <string name="txtOkDialog">OKE</string>

    <string name="statusQueue">Pesanan Masih Di Masak</string>
    <string name="statusReady">Pesanan Sudah Siap</string>
</resources>
