<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019.
  ~
  ~ Author: Mahatta Maulana
  ~ Github: https://github.com/hattamaulana
  ~
  ~ Last Modified at 9/25/19 11:50 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/lblTitleDialog"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/mainColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_reguler"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/zxing_transparent"
            android:fontFamily="@font/lato_bold"
            android:text="@string/txtPositiveButton"
            android:textColor="@color/softTextColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/zxing_transparent"
            android:fontFamily="@font/lato_bold"
            android:text="@string/txtNegativeButton"
            android:textColor="@color/mainColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>