<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019.
  ~
  ~ Author: Mahatta Maulana
  ~ Github: https://github.com/hattamaulana
  ~
  ~ Last Modified at 9/19/19 11:05 AM
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/homeGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".23"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/homeGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
        >

        <ImageView
            android:id="@+id/icMaid"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_waiter"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtHelper"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/homeGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalGuideline"
        >

        <ImageView
            android:id="@+id/icScan"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_scanning"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtScanner"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>